--- a/ready-education-technical-task-app/src/app/user/user.component.html
+++ b/ready-education-technical-task-app/src/app/user/user.component.html
@@ -1,25 +1,28 @@
 <div>
-  <h1>Users</h1>
-  <p class="subtitle">
-    View a collection of users and find out if it's a convenient time to reach
-    out!
-  </p>
-</div>
-<div class="card-collection">
-  <div class="user-card">
-    <div class="header"></div>
-    <div class="pill">
-      <span class="pill--timezone">Timezone: +3:30</span>
-      <span class="pill--local-time">Local Time: 15:00</span>
-    </div>
-    <img src="https://randomuser.me/api/portraits/thumb/men/1.jpg" alt="" />
+  <div>
+    <h1>Users</h1>
+    <p class="subtitle">
+      View a collection of users and find out if it's a convenient time to reach
+      out!
+    </p>
+  </div>
+  <div class="card-collection">
+    <div class="user-card" *ngFor="let user of userData">
+      <div class="pill">
+        <span class="pill--timezone">Timezone: +3:30</span>
+        <span class="pill--local-time">Local Time: 15:00</span>
+      </div>
 
-    <p class="card-content--name">Mr Joe Bloggs</p>
-    <p class="card-content--location">Paris, France</p>
-    <div class="icons">
-      <fa-icon [icon]="mailIcon"></fa-icon>
-      <fa-icon [icon]="phoneIcon"></fa-icon>
+      <img src="{{ user.picture.thumbnail }}" alt="" />
+
+      <p class="card-content--name">
+        {{ user.name.title }} {{ user.name.first }} {{ user.name.last }}
+      </p>
+      <p class="card-content--location">{{ user.location.city }}, COUNTRY</p>
+      <div class="icons">
+        <fa-icon [icon]="mailIcon"></fa-icon>
+        <fa-icon [icon]="phoneIcon"></fa-icon>
+      </div>
     </div>
-    <div class="footer"></div>
   </div>
 </div>
