--- a/ready-education-technical-task-app/src/app/user/user.component.scss
+++ b/ready-education-technical-task-app/src/app/user/user.component.scss
@@ -5,6 +5,8 @@ $bg: #f8f8f8;
 .card-collection {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
 
   .icons {
@@ -26,7 +28,7 @@ $bg: #f8f8f8;
     flex-direction: column;
     align-items: center; /* Center vertically */
     justify-content: center; /* Center horizontally */
-    max-width: 400px;
+    max-width: 500px;
     background-color: $bg;
 
     @media screen and (max-width: 3072px) {
@@ -41,7 +43,7 @@ $bg: #f8f8f8;
       display: flex;
       justify-content: space-between;
       flex-direction: column;
-
+      width: 90%;
       font-size: 22px;
       font-weight: 500;
       letter-spacing: 1.5px;
@@ -55,11 +57,6 @@ $bg: #f8f8f8;
         border-radius: 30px;
         padding: 10px 15px;
         margin: 5px;
-
-        @media screen and (max-width: 2000px) {
-          padding: 5px 0px;
-          width: 100%;
-        }
       }
       &--local-time {
         background-color: $sec;
@@ -68,10 +65,6 @@ $bg: #f8f8f8;
         border-radius: 30px;
         padding: 10px 15px;
         margin: 5px;
-        @media screen and (max-width: 2000px) {
-          padding: 5px 0px;
-          width: 100%;
-        }
       }
     }
 
@@ -138,34 +131,4 @@ h1 {
   height: 100%;
   font-family: Helvetica Neue, Helvetica, sans-serif;
   font-weight: 400;
-}
-
-.header {
-  position: relative;
-  width: 100%;
-  height: 60px;
-  background-color: $main;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: inherit;
-
-    -webkit-transform: skewY(8deg);
-    -moz-transform: skewY(8deg);
-    -ms-transform: skewY(8deg);
-    -o-transform: skewY(8deg);
-    transform: skewY(8deg);
-    -webkit-transform-origin: 0 100%;
-    -moz-transform-origin: 0 100%;
-    -ms-transform-origin: 0 100%;
-    -o-transform-origin: 0 100%;
-    transform-origin: 0 100%;
-  }
 }
