--- a/ready-education-technical-task-app/src/app/user/user.component.scss
+++ b/ready-education-technical-task-app/src/app/user/user.component.scss
@@ -26,8 +26,8 @@ $bg: #f8f8f8;
     width: 10%;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center vertically */
-    justify-content: center; /* Center horizontally */
+    align-items: center;
+    justify-content: center;
     max-width: 500px;
     background-color: $bg;
 
